fix: too bigger history dialogs of nodejs api

--- a/src/nodejs-api/index.scss
+++ b/src/nodejs-api/index.scss
@@ -209,18 +209,28 @@
             width: 100%;
             height: 100%;
             background-color: rgba(0,0,0, .18);
+            backdrop-filter: blur(2px);
             z-index: 1;
         }
         table {
             position: fixed;
             left: 50%;
             top: 50%;
+            display: block;
+            max-height: 61.8%;
             border-radius: $radius;
-            overflow: hidden;
-            transform: translate3d(-50%,-60%,0);
+            overflow: hidden auto;
+            transform: translate3d(-50%,-53.75%,0);
             background-color: var(--color-canvas-overlay);
             box-shadow: var(--shadow);
             z-index: 11;
+
+            th {
+                position: sticky;
+                top: 0;
+                background-color: var(--canvas-opacity);
+                backdrop-filter: blur(2px);
+            }
         }
     }
 
