--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -154,6 +154,7 @@ dialog.modal {
     &::backdrop {
         background-color: rgb(0 0 0 / 0%);
         transition: $duration;
+        backdrop-filter: blur(1px);
     }
 
     & form {
